// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots BlissInput disabled 1`] = `
<label
  className="sc-htpNat dBsMvx"
  htmlFor="disabled-input"
>
  <input
    autoFocus={undefined}
    className="is-empty sc-bdVaJa iuJiQt"
    disabled={true}
    id={undefined}
    name="disabled-input"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    placeholder="cant see me"
    required={undefined}
    style={undefined}
    type="text"
  />
  <span
    className="sc-bxivhb ijmrON"
  >
    <span
      className="sc-ifAKCX bkIDju"
    >
      Cant do it
    </span>
  </span>
</label>
`;

exports[`Storyshots BlissInput simple input 1`] = `
<label
  className="sc-htpNat dBsMvx"
  htmlFor="simple-input"
>
  <input
    autoFocus={undefined}
    className="is-empty sc-bdVaJa iuJiQt"
    disabled={undefined}
    id={undefined}
    name="simple-input"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    placeholder="Leeroy Jenkins"
    required={undefined}
    style={undefined}
    type="text"
  />
  <span
    className="sc-bxivhb ijmrON"
  >
    <span
      className="sc-ifAKCX bkIDju"
    >
      Name
    </span>
  </span>
</label>
`;

exports[`Storyshots BlissInput with all the props 1`] = `
<label
  className="sc-htpNat dBsMvx"
  htmlFor="email-input"
>
  <input
    autoFocus={true}
    className="is-empty sc-bdVaJa iuJiQt"
    disabled={undefined}
    id={undefined}
    name="email-input"
    onBlur={[Function]}
    onChange={[Function]}
    onFocus={[Function]}
    placeholder="leeroy@pals4life.com"
    required={undefined}
    style={undefined}
    type="email"
  />
  <span
    className="sc-bxivhb ijmrON"
  >
    <span
      className="sc-ifAKCX bkIDju"
    >
      Email
    </span>
  </span>
</label>
`;

exports[`Storyshots Button simple text 1`] = `
<button
  className="Button sc-jTzLTM daerbk"
  onClick={[Function]}
>
  Hello Button
</button>
`;

exports[`Storyshots Button when urgent 1`] = `
<button
  className="Button sc-jTzLTM djVEjf"
  onClick={[Function]}
>
  Cancel
</button>
`;

exports[`Storyshots Button with some emoji 1`] = `
<button
  className="Button sc-jTzLTM daerbk"
  onClick={[Function]}
>
  😀 😎 👍 💯
</button>
`;

exports[`Storyshots Card Simple card example 1`] = `
<div
  className="sc-EHOje hdhsvV"
  style={undefined}
>
  <p>
    Hey there!
  </p>
</div>
`;

exports[`Storyshots Divider Simple example 1`] = `
<div
  className="sc-bZQynM gLyZEf"
  style={undefined}
>
  <strong
    className="sc-gzVnrw eaFczQ"
  >
    Or
  </strong>
</div>
`;

exports[`Storyshots HeroImage Simple hero image 1`] = `
<div
  className="sc-iwsKbI ihUVUJ"
  style={Object {}}
>
  <div
    className="sc-dnqmqq imWoSd"
  >
    <div
      className="sc-htoDjs bUHgQc"
    />
    <div
      className="sc-gZMcBi kwhcsJ"
    >
      flume
    </div>
  </div>
</div>
`;

exports[`Storyshots LoadingIndicator simple example 1`] = `
<div
  className="sc-gqjmRU dArAbk"
>
  <div
    className="sc-fjdhpX ddHtlg"
  />
  <div
    className="sc-jzJRlG hzKql"
  />
  <div
    className="sc-cSHVUG fPpcuT"
  />
  <div
    className="sc-kAzzGY kjEBlA"
  />
  <div
    className="sc-chPdSV hqTgvE"
  />
  <div
    className="sc-kgoBCf rGQHb"
  />
  <div
    className="sc-kGXeez jdqTdi"
  />
  <div
    className="sc-kpOJdX eIPfxx"
  />
  <div
    className="sc-dxgOiQ kRZMXz"
  />
  <div
    className="sc-ckVGcZ ghRiPn"
  />
  <div
    className="sc-jKJlTe eFubpZ"
  />
  <div
    className="sc-eNQAEJ thMtd"
  />
</div>
`;

exports[`Storyshots ThumbImage Album cover example 1`] = `
<div
  className="sc-VigVT dHCvjH"
  height="150px"
  style={undefined}
  width="150px"
/>
`;
